# xmasGifts

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.cpp  config.h  email.cpp  email.h  guid.cpp  guid.h  output.cpp  output.h  parser.cpp  parser.h  person.h  shuffle.cpp  shuffle.h  xmasGifts.cpp
src/: config.cpp  config.h  email.cpp  output.cpp  output.h  parser.cpp  parser.h  person.h  xmasGifts.cpp
